@@ -5,7 +5,7 @@
 
   <groupId>org.topracing</groupId>
   <artifactId>topracingwebapp</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.4</version>
   <packaging>war</packaging>
   <name>TOPRacingWEBApp</name>
 
@@ -144,6 +144,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.2.5</version>
         <configuration>
+          <argLine>-Dnet.bytebuddy.experimental=true</argLine>
           <useModulePath>false</useModulePath>
         </configuration>
       </plugin>
@@ -153,6 +154,7 @@
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>3.2.5</version>
         <configuration>
+          <argLine>-Dnet.bytebuddy.experimental=true</argLine>
           <useModulePath>false</useModulePath>
           <systemPropertyVariables>
             <topracing.baseUrl>${topracing.baseUrl}</topracing.baseUrl>
